[gd_scene load_steps=26 format=3 uid="uid://dtge71egtiyrf"]

[ext_resource type="Script" path="res://scripts/hari_pertama.gd" id="1_c6wp0"]
[ext_resource type="PackedScene" uid="uid://dnphv7esbmo4w" path="res://scenes/dummy/QuestTimer.tscn" id="2_2lkgq"]
[ext_resource type="PackedScene" uid="uid://eyjjp6rydhdv" path="res://pause_menu_yudha.tscn" id="3_ocu16"]
[ext_resource type="Theme" uid="uid://bv8b7fiak2xr" path="res://assets/Art/themes/default_theme.tres" id="4_vqevv"]
[ext_resource type="Texture2D" uid="uid://njgloyrvb8jf" path="res://assets/Art/PAUSE.png" id="5_5633u"]
[ext_resource type="FontFile" uid="uid://ormovon3kbjx" path="res://assets/Fonts/comicz.ttf" id="6_33qdb"]
[ext_resource type="PackedScene" uid="uid://b0sg1qqarvea4" path="res://scenes/dummy/rating_system.tscn" id="7_2wj5t"]
[ext_resource type="Texture2D" uid="uid://cqopeg5daa0mj" path="res://assets/Art/UI HP.png" id="8_mwmvf"]
[ext_resource type="Texture2D" uid="uid://bjbh054dy1s8j" path="res://assets/Art/PANEL KOSONGAN.png" id="9_bxtwa"]
[ext_resource type="Texture2D" uid="uid://jtipyajfnedb" path="res://assets/Art/PLAY BUTTON.png" id="10_7anfu"]
[ext_resource type="PackedScene" uid="uid://c6am1kusod3kl" path="res://scenes/Gameplay/world_tile_map.tscn" id="11_re4js"]
[ext_resource type="TileSet" uid="uid://c2wn1no8xhpbw" path="res://assets/environment/world_tileset.tres" id="11_yyol6"]
[ext_resource type="PackedScene" uid="uid://c7nar4uo3cmbt" path="res://scenes/dummy/object/InteractionArea.tscn" id="12_3325k"]
[ext_resource type="PackedScene" uid="uid://qkbsmm0dhgmf" path="res://scenes/Player/character_ali.tscn" id="13_3fikr"]
[ext_resource type="AudioStream" uid="uid://cxw5ufhejewj3" path="res://Audio/SFX/phone lock or unlock (mp3cut.net).mp3" id="13_gpgxo"]
[ext_resource type="AudioStream" uid="uid://bu3rjf54b5lms" path="res://Audio/Music/bgm gameplay.mp3" id="14_bue6b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0w472"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4vucx"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1k8n4"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fff3b"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xy4ti"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Animation" id="Animation_r2eu0"]
resource_name = "Quest_Appear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(693, 1100), Vector2(693, 50), Vector2(693, 85)]
}

[sub_resource type="Animation" id="Animation_ltt5s"]
resource_name = "Start_Quest"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(693, 1100), Vector2(693, 50), Vector2(693, 85)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7i0bb"]
_data = {
"Quest_Appear": SubResource("Animation_r2eu0"),
"Start_Quest": SubResource("Animation_ltt5s")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0opji"]
size = Vector2(104, 49)

[node name="HariPertama" type="Node2D"]
script = ExtResource("1_c6wp0")

[node name="UI" type="CanvasLayer" parent="."]

[node name="QuestTimer" parent="UI" instance=ExtResource("2_2lkgq")]
minute = 2

[node name="PauseMenu" parent="UI" instance=ExtResource("3_ocu16")]
offset_left = 6.0
offset_right = 6.0

[node name="Pause" type="Button" parent="UI"]
visible = false
offset_left = 1800.0
offset_top = 30.0
offset_right = 2033.0
offset_bottom = 240.0
scale = Vector2(0.402468, 0.4)
theme = ExtResource("4_vqevv")
theme_override_styles/normal = SubResource("StyleBoxFlat_0w472")
theme_override_styles/hover = SubResource("StyleBoxFlat_4vucx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1k8n4")
theme_override_styles/disabled = SubResource("StyleBoxFlat_fff3b")
theme_override_styles/focus = SubResource("StyleBoxFlat_xy4ti")
icon = ExtResource("5_5633u")

[node name="Pause_Text" type="Label" parent="UI/Pause"]
visibility_layer = 7
layout_mode = 0
offset_left = 21.8747
offset_top = 218.75
offset_right = 204.875
offset_bottom = 289.75
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("6_33qdb")
theme_override_font_sizes/font_size = 60
text = "Pause
(Esc)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RatingSystem" parent="UI" instance=ExtResource("7_2wj5t")]
position = Vector2(0, 6)

[node name="PlayQuest" type="TextureRect" parent="UI"]
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -267.0
offset_top = 560.0
offset_right = 1339.0
offset_bottom = 3352.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.32, 0.32)
texture = ExtResource("8_mwmvf")

[node name="Level1" type="TextureRect" parent="UI/PlayQuest"]
layout_mode = 0
offset_left = 145.0
offset_top = 310.0
offset_right = 1459.0
offset_bottom = 2226.0
texture = ExtResource("9_bxtwa")

[node name="Handphone" type="AnimationPlayer" parent="UI/PlayQuest"]
libraries = {
"": SubResource("AnimationLibrary_7i0bb")
}

[node name="PlayButton" type="Button" parent="UI/PlayQuest"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -178.0
offset_top = 204.0
offset_right = -28.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.5, 2.5)
theme = ExtResource("4_vqevv")
icon = ExtResource("10_7anfu")

[node name="Play_Text" type="Label" parent="UI/PlayQuest/PlayButton"]
visibility_layer = 7
layout_mode = 0
offset_left = -17.0
offset_top = 105.0
offset_right = 166.0
offset_bottom = 190.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("6_33qdb")
theme_override_font_sizes/font_size = 40
text = "Mulai"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Environment" type="Node" parent="."]

[node name="WorldTileMap" parent="Environment" instance=ExtResource("11_re4js")]

[node name="WorldLimit" type="TileMap" parent="Environment"]
visible = false
tile_set = ExtResource("11_yyol6")
format = 2
layer_0/tile_data = PackedInt32Array(-1310688, 0, 0, -1245152, 0, 0, -1179616, 0, 0, -1114080, 0, 0, -1048544, 0, 0, -1048545, 0, 0, -1048546, 0, 0, -1048547, 0, 0, -1048548, 0, 0, -1048549, 0, 0, -1048550, 0, 0, -1048551, 0, 0, -1048552, 0, 0, -1048553, 0, 0, -1048554, 0, 0, -1048555, 0, 0, -1114091, 0, 0, -1179627, 0, 0, -1245163, 0, 0, -1310699, 0, 0, -1310698, 0, 0, -1310697, 0, 0, -1310696, 0, 0, -1310695, 0, 0, -1310694, 0, 0, -1310693, 0, 0, -1310692, 0, 0, -1310691, 0, 0, -1310690, 0, 0, -1310689, 0, 0, -1245160, 0, 0, -1245162, 0, 0, -1179626, 0, 0, -1114090, 0, 0, -1114089, 0, 0, -1179625, 0, 0, -1245161, 0, 0, -1179624, 0, 0, -1114088, 0, 0, -1114087, 0, 0, -1179623, 0, 0, -1245159, 0, 0, -1245158, 0, 0, -1179622, 0, 0, -1114086, 0, 0, -1114085, 0, 0, -1179621, 0, 0, -1245157, 0, 0, -1245156, 0, 0, -1179620, 0, 0, -1114084, 0, 0, -1179619, 0, 0, -1245155, 0, 0, -1114082, 0, 0, -1179618, 0, 0, -1245154, 0, 0, -1245153, 0, 0, -1179617, 0, 0, -1114081, 0, 0, -1114083, 0, 0, -1376223, 0, 0, -1376224, 0, 0, -1376225, 0, 0, -1376226, 0, 0, -1376227, 0, 0, -1376228, 0, 0, -1376229, 0, 0, -1376230, 0, 0, -1376231, 0, 0, -1376232, 0, 0, -1376233, 0, 0, -1376234, 0, 0, -1376235, 0, 0, -1310687, 0, 0, -1245151, 0, 0, -1179615, 0, 0, -1114079, 0, 0, -1048543, 0, 0, -983007, 0, 0, -983008, 0, 0, -983009, 0, 0, -983010, 0, 0, -983011, 0, 0, -983012, 0, 0, -983013, 0, 0, -983014, 0, 0, -983015, 0, 0, -983016, 0, 0, -983017, 0, 0, -983018, 0, 0, -983019, 0, 0, -983020, 0, 0, -983021, 0, 0, -983022, 0, 0, -983023, 0, 0, -983024, 0, 0, -983025, 0, 0, -983026, 0, 0, -983027, 0, 0, -983028, 0, 0, -1048564, 0, 0, -1114100, 0, 0, -1179636, 0, 0, -1245172, 0, 0, -1310708, 0, 0, -1376244, 0, 0, -1376243, 0, 0, -1310707, 0, 0, -1245171, 0, 0, -1179635, 0, 0, -1114099, 0, 0, -1048563, 0, 0, -1310706, 0, 0, -1376242, 0, 0, -1245170, 0, 0, -1179634, 0, 0, -1179633, 0, 0, -1245169, 0, 0, -1310705, 0, 0, -1310704, 0, 0, -1310703, 0, 0, -1310702, 0, 0, -1310701, 0, 0, -1310700, 0, 0, -1376236, 0, 0, -1376237, 0, 0, -1376238, 0, 0, -1376239, 0, 0, -1376240, 0, 0, -1376241, 0, 0, -1245168, 0, 0, -1179632, 0, 0, -1179631, 0, 0, -1179630, 0, 0, -1179629, 0, 0, -1179628, 0, 0, -1245166, 0, 0, -1245167, 0, 0, -1245165, 0, 0, -1245164, 0, 0, -1114094, 0, 0, -1114095, 0, 0, -1048557, 0, 0, -1048556, 0, 0, -1048558, 0, 0, -1048559, 0, 0, -1048560, 0, 0)

[node name="AntarPaket" parent="Environment" instance=ExtResource("12_3325k")]
visibility_layer = 4
position = Vector2(1155, -797)
action_name = "antar paket"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Environment/AntarPaket"]
position = Vector2(0, 52.5)
shape = SubResource("RectangleShape2D_0opji")

[node name="CanvasModulate" type="CanvasModulate" parent="Environment"]
position = Vector2(-56, -8)
color = Color(0.359216, 0.00115514, 0.864972, 1)

[node name="Character_Ali" parent="." groups=["Player"] instance=ExtResource("13_3fikr")]
position = Vector2(4200, -2216)
scale = Vector2(1.2, 1.2)
ACCEL = 800
FRICTION = 200
MAX_SPEED = 200
starting_direction = Vector2(0, 1)

[node name="Sound" type="Node" parent="."]

[node name="open_handphone_sound" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource("13_gpgxo")
bus = &"SFX"

[node name="day_1_bgm" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource("14_bue6b")
volume_db = -5.0
bus = &"Music"

[connection signal="mouse_entered" from="UI/Pause" to="." method="_on_pause_mouse_entered"]
[connection signal="mouse_exited" from="UI/Pause" to="." method="_on_pause_mouse_exited"]
[connection signal="pressed" from="UI/Pause" to="." method="_on_pause_pressed"]
[connection signal="mouse_entered" from="UI/PlayQuest/PlayButton" to="." method="_on_play_button_mouse_entered"]
[connection signal="mouse_exited" from="UI/PlayQuest/PlayButton" to="." method="_on_play_button_mouse_exited"]
[connection signal="pressed" from="UI/PlayQuest/PlayButton" to="." method="_on_play_button_pressed"]
